@@ -30,3 +30,4 @@ Question: Sp{\o}rgsm{\aa}l
 GivenAnswer: Svar givet
 CorrectAnswer: Korrekt svar
 ExamSheet: Eksamensark
+Babel: danish
