@@ -30,3 +30,4 @@ Question: Frage
 GivenAnswer: Gegebene Antwort
 CorrectAnswer: Richtige Antwort
 ExamSheet: Pr{\"u}fungsbeleg
+Babel: ngerman
