@@ -30,3 +30,4 @@ Question: Cu{\'e}stion
 GivenAnswer: Respuesta dada
 CorrectAnswer: Respuesta correcta
 ExamSheet: Comprobante del examen
+Babel: spanish
