@@ -30,3 +30,4 @@ Question: Kysymys
 GivenAnswer: Annettu vastaus
 CorrectAnswer: Oikea vastaus
 ExamSheet: Koepaperi
+Babel: finnish
