@@ -30,3 +30,4 @@ Question: Question
 GivenAnswer: R{\'e}ponse donn{\'e}e
 CorrectAnswer: Bonne r{\'e}ponse
 ExamSheet: Feuille d'examen
+Babel: francais
