@@ -30,3 +30,4 @@ Question: Froge
 GivenAnswer: Eueri Antwort
 CorrectAnswer: Di richtig Antwort
 ExamSheet: Pr{\"u}efigsbeleg
+Babel: ngerman
