@@ -30,3 +30,4 @@ Question: Pitanje
 GivenAnswer: Dati Odgovor
 CorrectAnswer: To\v{c}an Odgovor
 ExamSheet: Ispitni List
+Babel: croatian
