@@ -30,3 +30,4 @@ Question: K{\'e}rd{\'e}s
 GivenAnswer: Adott v{\'a}lasz
 CorrectAnswer: Helyes v{\'a}lasz
 ExamSheet: Vizsgalap
+Babel: magyar
