@@ -30,3 +30,4 @@ Question: Domanda
 GivenAnswer: Risposta data
 CorrectAnswer: Risposta corretta
 ExamSheet: Foglio d'esame
+Babel: italian
