@@ -30,3 +30,4 @@ Question: Vraag
 GivenAnswer: Gegeven antwoord
 CorrectAnswer: Correct antwoord
 ExamSheet: Antwoordformulier
+Babel: dutch
