@@ -30,3 +30,4 @@ Question: Quest\~{a}o
 GivenAnswer: Resposta dada
 CorrectAnswer: Resposta correta
 ExamSheet: Folha de exame
+Babel: portuguese
