@@ -30,3 +30,4 @@ Question: \^{I}ntrebare
 GivenAnswer: R\u{a}spuns dat
 CorrectAnswer: R\u{a}spuns corect
 ExamSheet: Foaie de examen
+Babel: romanian
