@@ -30,3 +30,4 @@ Question: Pitanje
 GivenAnswer: Dati Odgovor
 CorrectAnswer: Ta\v{c}an Odgovor
 ExamSheet: Ispitni List
+Babel: serbian
